recipemaker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipemaker-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "backendproject"
    kubernetes.io/ingress.global-static-ip-name: "34.69.196.76"
    nginx.ingress.kubernetes.io/proxy-timeout: "60" 
spec:
  defaultBackend:
    service:
      name: recipemaker-app
      port:
        number: 3000
